--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -10,11 +10,15 @@
     <None Remove="Entities\" />
     <None Remove="DataAccess\" />
     <None Remove="DataAccess\EntitiyFramework\" />
+    <None Remove="Utilities\" />
+    <None Remove="Utilities\Results\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
     <Folder Include="DataAccess\" />
     <Folder Include="DataAccess\EntitiyFramework\" />
+    <Folder Include="Utilities\" />
+    <Folder Include="Utilities\Results\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
