--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -12,6 +12,8 @@
     <None Remove="DataAccess\EntitiyFramework\" />
     <None Remove="Utilities\" />
     <None Remove="Utilities\Results\" />
+    <None Remove="CrossCuttingConcerns\" />
+    <None Remove="CrossCuttingConcerns\Validation\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
@@ -19,8 +21,14 @@
     <Folder Include="DataAccess\EntitiyFramework\" />
     <Folder Include="Utilities\" />
     <Folder Include="Utilities\Results\" />
+    <Folder Include="CrossCuttingConcerns\" />
+    <Folder Include="CrossCuttingConcerns\Validation\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
+    <PackageReference Include="FluentValidation" Version="11.9.1" />
+    <PackageReference Include="Autofac" Version="8.0.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="7.1.0" />
   </ItemGroup>
 </Project>
